--- a/MVCProject/Views/Home/Privacy.cshtml
+++ b/MVCProject/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
+﻿@section title
+{
+    <h1>Privacy</h1>
 }
-<h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
