--- a/MVCProject/Views/Shared/_Layout.cshtml
+++ b/MVCProject/Views/Shared/_Layout.cshtml
@@ -23,6 +23,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Categories</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Products" asp-action="Index">Products</a>
+                    </li>                    
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>                    
                 </ul>
             </div>
         </div>
