--- a/MVCProject/Views/Products/Add.cshtml
+++ b/MVCProject/Views/Products/Add.cshtml
@@ -1,7 +1,7 @@
-@model MVCProject.CategoryDto
+@model MVCProject.ProductDto
 @section title
 {
-    <h3>Add Category</h3>
+    <h3>Add product to category "@ViewData["CategoryName"]" </h3>
 }
 
 <partial name="_Product" model="@Model"/>
