--- a/MVCProject/Views/Products/Index.cshtml
+++ b/MVCProject/Views/Products/Index.cshtml
@@ -1,8 +1,8 @@
-@model List<Product>
+@model List<ProductDto>
 
 @section title
 {
-    <h3>Products</h3>
+    <h3>Products in category: "@ViewData["CategoryName"]"</h3>
 }
 
 @if (Model.Count > 0)
@@ -28,4 +28,6 @@
     </table>
     <br/>
 }
-<a class="btn btn-primary" asp-controller="Products" asp-action="Add">Add</a>
+
+<a class="btn btn-primary" asp-controller="Products" asp-action="Add" asp-route-categoryName="@ViewData["CategoryName"]"
+   asp-route-categoryId="@ViewData["CategoryId"]">Add</a>
