--- a/MVCProject/Views/Products/_Product.cshtml
+++ b/MVCProject/Views/Products/_Product.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<form method="post" asp-controller="Categories" asp-action="@action">
+<form method="post" asp-controller="Products" asp-action="@action">
     @if (action.ToLower() == "edit")
     {
         <input type="hidden" asp-for="Id"/>
@@ -19,7 +19,6 @@
         <div class="col">
             <span class="text-danger" asp-validation-for="Name"></span>
         </div>
-        <div asp-validation-summary="All" class="text-danger"></div>
     </div>
 
     <div class="row mb-3">
@@ -33,6 +32,8 @@
 
     <div class="row mb-3">
         <div class="col-2">
+            <input type="hidden" name="categoryId" asp-for="@ViewData["CategoryId"]" />
+            <input type="hidden" name="categoryName" asp-for="@ViewData["CategoryName"]" />
             <input type="submit" class="btn btn-primary" value="Save"/>
         </div>
         <div class="col-6">
