--- a/MVCProject/Views/Shared/_Layout.cshtml
+++ b/MVCProject/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Supermarket Management</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="~/css/dropdown-style.css"/>
 </head>
 <body>
 <header>
